--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
+
+# Ignore application configuration
+/config/application.yml
