--- a/config/database.yml
+++ b/config/database.yml
@@ -10,11 +10,11 @@
 #   https://dev.mysql.com/doc/refman/5.7/en/password-hashing.html
 #
 default: &default
-  adapter: mysql2
-  encoding: utf8
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
-  password: MyNewPass
+  host: twoyak-db-demo.cmp8crvhm5xg.ap-northeast-2.rds.amazonaws.com
+  username: tino7060
+  password: <%= ENV['DB_PASSWORD'] %>
+  database: twoyak_db_development
+  port: 3306
 
 development:
   <<: *default
