--- a/config/database.yml
+++ b/config/database.yml
@@ -19,7 +19,14 @@ default: &default
 
 development:
   <<: *default
-  database: twoyak_back_development
+  development:
+  driver: mysql2
+  host: 127.0.0.1
+  username: TWOYAK
+  password: <%= ENV['DB_PASSWORD'] %>
+  database: twoyak_db_development
+  port: 1234
+
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
