--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,7 @@ development:
   driver: mysql2
   username: root
   password: <%= ENV['DB_PASSWORD'] %>
-  database: twoyak_test
+  database: twoyak_db_development
   port: 3306
 
 # Warning: The database defined as "test" will be erased and
