--- a/config/database.yml
+++ b/config/database.yml
@@ -22,8 +22,8 @@ development:
   development:
   driver: mysql2
   username: root
-  password: <%= ENV['DB_PASSWORD'] %>
-  database: twoyak_test
+  password: MyNewPass
+  database: twoyak_db_development
   port: 3306
 
 # Warning: The database defined as "test" will be erased and
